fixed mobmenu bug

--- a/css/storipress-landing.webflow.css
+++ b/css/storipress-landing.webflow.css
@@ -5992,6 +5992,10 @@ body {
   align-items: center;
 }
 
+.mobile-nav-menu {
+  display: none;
+}
+
 @media screen and (max-width: 991px) {
   .footer {
     padding-right: 20px;
@@ -7511,6 +7515,10 @@ body {
     font-size: 16px;
   }
 
+  .menu-button {
+    z-index: 10000;
+  }
+
   .navigation {
     position: -webkit-sticky;
     position: sticky;
@@ -8930,6 +8938,10 @@ body {
     flex-direction: column;
   }
 
+  .cookie-modal {
+    display: none;
+  }
+
   .pricing-outline-parent.explainer {
     margin-bottom: 0.5rem;
     padding-top: 0rem;
@@ -9046,6 +9058,80 @@ body {
 
   .navlinks {
     display: none;
+  }
+
+  .mobile-nav-menu {
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    right: 0%;
+    bottom: 0%;
+    z-index: 999;
+    display: none;
+    height: 100vh;
+    padding-top: 3rem;
+    padding-right: 1.4rem;
+    padding-left: 1.4rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    background-color: #fff;
+  }
+
+  .div-block-1474 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 2rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    font-family: 'Archia webfont', Arial, sans-serif;
+    font-size: 1.25rem;
+    line-height: 150%;
+    text-decoration: none;
+  }
+
+  .text-block-70 {
+    margin-bottom: 0.5rem;
+    color: #333;
+    font-weight: 600;
+    text-decoration: none;
+  }
+
+  .link-7 {
+    margin-bottom: 0.5rem;
+    color: #333;
+    font-size: 1rem;
+    text-decoration: none;
+  }
+
+  .div-block-1475 {
+    position: absolute;
+    left: 0%;
+    top: auto;
+    right: 0%;
+    bottom: 0%;
+    width: 100vw;
+    padding: 2rem 1rem 1.5rem;
+    box-shadow: 0 -1px 20px 5px rgba(0, 0, 0, 0.15);
   }
 }
 
@@ -10399,9 +10485,12 @@ body {
   }
 
   .desktop-menubar-button {
-    display: none;
     max-height: none;
     margin-top: 0rem;
+  }
+
+  .mobile-nav-menu {
+    display: none;
   }
 }
 
