--- a/css/storipress-landing.webflow.css
+++ b/css/storipress-landing.webflow.css
@@ -9130,7 +9130,7 @@ body {
     right: 0%;
     bottom: 0%;
     width: 100vw;
-    padding: 1rem 1rem 4rem;
+    padding: 1.5rem 1rem 13vh;
     box-shadow: 0 -1px 20px 5px rgba(0, 0, 0, 0.15);
   }
 }
