--- a/css/storipress-landing.webflow.css
+++ b/css/storipress-landing.webflow.css
@@ -4628,9 +4628,8 @@ body {
   width: 32%;
   height: auto;
   padding: 2rem;
-  border-radius: 1rem;
   background-color: transparent;
-  box-shadow: 1px 0 20px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 1px 2px 5px 2px rgba(0, 0, 0, 0.05);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   color: #000;
 }
