--- a/css/storipress-landing.webflow.css
+++ b/css/storipress-landing.webflow.css
@@ -4329,27 +4329,21 @@ body {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
   background-color: #c5c5c5;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
 .div-block-1430.manager {
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
+  border-top-left-radius: 0rem;
+  border-top-right-radius: 0rem;
   background-image: linear-gradient(151deg, #dbb4b5, #e1e2bc);
 }
 
 .div-block-1430.builder {
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
   background-image: linear-gradient(151deg, #aabdda, #ddbcdc);
 }
 
 .div-block-1430.editor {
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
   background-image: linear-gradient(151deg, #ffd3e2, #faf5e6);
 }
 
@@ -4366,9 +4360,11 @@ body {
 }
 
 .div-block-1430.engagement {
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
   background-image: linear-gradient(151deg, #a6dab2, #f5eaca);
+}
+
+.div-block-1430.landing-editor {
+  background-image: linear-gradient(151deg, #ffd3e2, #faf5e6);
 }
 
 .div-block-1431 {
@@ -4565,8 +4561,6 @@ body {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
   background-color: #191919;
   background-image: -webkit-gradient(linear, left top, right top, from(#ffd3e2), to(#d1c08e));
   background-image: linear-gradient(90deg, #ffd3e2, #d1c08e);
@@ -10311,6 +10305,10 @@ body {
   }
 
   .div-block-1430.editor {
+    border-radius: 0px;
+  }
+
+  .div-block-1430.landing-editor {
     border-radius: 0px;
   }
 
